// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  border-bottom-color: #3c5ad0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:disabled,
.c1[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c1:not(:first-child) {
  margin-left: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:disabled,
.c2[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c2:not(:first-child) {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
  class="c0"
>
  <a
    class="c1"
  >
    Tab 1
  </a>
  <a
    class="c2"
    disabled=""
  >
    Tab 2
  </a>
  <a
    class="c2"
  >
    Tab 3
  </a>
</nav>
`;

exports[`Tabs should render with props absolute 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  border-bottom-color: #3c5ad0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:disabled,
.c1[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c1:not(:first-child) {
  margin-left: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:disabled,
.c2[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c2:not(:first-child) {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: -3px;
}

<nav
  class="c0"
>
  <a
    class="c1"
  >
    Tab 1
  </a>
  <a
    class="c2"
    disabled=""
  >
    Tab 2
  </a>
  <a
    class="c2"
  >
    Tab 3
  </a>
</nav>
`;

exports[`Tabs should render with props pills 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-radius: 0.5rem;
  color: #5e5e5e;
  background-color: #3c5ad0;
  color: #ffffff;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:disabled,
.c1[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c1:not(:first-child) {
  margin-left: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-radius: 0.5rem;
  color: #5e5e5e;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:disabled,
.c2[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c2:not(:first-child) {
  margin-left: 0.5rem;
}

.c2:hover {
  background-color: #e0e0e0;
  color: #373737;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
  class="c0"
>
  <a
    class="c1"
  >
    Tab 1
  </a>
  <a
    class="c2"
    disabled=""
  >
    Tab 2
  </a>
  <a
    class="c2"
  >
    Tab 3
  </a>
</nav>
`;

exports[`Tabs should render with sizes 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  border-bottom-color: #3c5ad0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:disabled,
.c3[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c3:not(:first-child) {
  margin-left: 0.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:disabled,
.c4[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c4:not(:first-child) {
  margin-left: 0.5rem;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 1.75rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border-bottom: 3px solid transparent;
  border-bottom-color: #3c5ad0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:disabled,
.c1[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c1:not(:first-child) {
  margin-left: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 1.75rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:disabled,
.c2[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c2:not(:first-child) {
  margin-left: 0.5rem;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.75rem;
  padding: 0 1.5rem;
  font-size: 1.125rem;
  border-bottom: 3px solid transparent;
  border-bottom-color: #3c5ad0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:disabled,
.c5[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c5:not(:first-child) {
  margin-left: 0.5rem;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1a1a1a;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  height: 2.75rem;
  padding: 0 1.5rem;
  font-size: 1.125rem;
  border-bottom: 3px solid transparent;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:disabled,
.c6[disabled] {
  opacity: 0.5;
  cursor: default;
  pointer-events: none;
}

.c6:not(:first-child) {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <nav
    class="c0"
  >
    <a
      class="c1"
    >
      Tab 1
    </a>
    <a
      class="c2"
    >
      Tab 2
    </a>
    <a
      class="c2"
    >
      Tab 3
    </a>
  </nav>
  <nav
    class="c0"
  >
    <a
      class="c3"
    >
      Tab 1
    </a>
    <a
      class="c4"
    >
      Tab 2
    </a>
    <a
      class="c4"
    >
      Tab 3
    </a>
  </nav>
  <nav
    class="c0"
  >
    <a
      class="c5"
    >
      Tab 1
    </a>
    <a
      class="c6"
    >
      Tab 2
    </a>
    <a
      class="c6"
    >
      Tab 3
    </a>
  </nav>
</div>
`;
